--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@subsquid/substrate-processor": "^1.2.0",
     "@subsquid/typeorm-migration": "^0.1.0",
     "@subsquid/typeorm-store": "^0.1.0",
+    "@subsquid/util-timeout": "0.0.0",
     "dotenv": "^10.0.0",
     "ethers": "^5.6.9",
     "pg": "^8.7.3",
