feat: refactor entities handling

--- a/.env
+++ b/.env
@@ -12,7 +12,8 @@ DB_NAME=moonriver_erc20_erc721
 DB_USER=dev
 DB_PASS=qweasdzxc1
 DB_HOST=localhost
-DB_PORT=5432
+#DB_PORT=5432
+DB_PORT=5433
 DEBUG=index-builder:*
 TYPEORM_LOGGING=error
 
