--- a/package.json
+++ b/package.json
@@ -6,21 +6,22 @@
     "watch": "yarn chokidar \"src/**/*\" \"typegen\" -c 'yarn build'",
     "db:reset": ". ./scripts/reset-db.sh",
     "db:migrate": "npx squid-typeorm-migration apply",
+    "typegen:abi": ". ./scripts/typegen-abi.sh",
     "processor:start": "node lib/processor.js",
     "query-node:start": "squid-graphql-server",
     "lint": "npm run lint:prod -- --fix",
     "lint:prod": "eslint . --ext .ts --ignore-path .gitignore --max-warnings 0"
   },
   "dependencies": {
-    "@ethersproject/abi": "^5.6.4",
-    "@subsquid/archive-registry": "^1.0.2",
-    "@subsquid/cli": "^0.5.1",
-    "@subsquid/evm-typegen": "^1.0.1",
-    "@subsquid/graphql-server": "^1.1.0",
-    "@subsquid/ss58": "^0.1.1",
-    "@subsquid/substrate-processor": "^1.2.0",
-    "@subsquid/typeorm-migration": "^0.1.0",
-    "@subsquid/typeorm-store": "^0.1.0",
+    "@ethersproject/abi": "^5.6.1",
+    "@subsquid/archive-registry": "^1.0.15",
+    "@subsquid/cli": "^0.7.4",
+    "@subsquid/evm-typegen": "^1.3.1",
+    "@subsquid/graphql-server": "^3.2.3",
+    "@subsquid/ss58": "^0.1.2",
+    "@subsquid/substrate-processor": "^2.0.1",
+    "@subsquid/typeorm-migration": "^0.1.3",
+    "@subsquid/typeorm-store": "^0.1.5",
     "@subsquid/util-timeout": "0.0.0",
     "dotenv": "^10.0.0",
     "ethers": "^5.6.9",
@@ -28,9 +29,9 @@
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
-    "@subsquid/substrate-metadata-explorer": "^1.0.3",
-    "@subsquid/substrate-typegen": "^1.0.2",
-    "@subsquid/typeorm-codegen": "^0.0.2",
+    "@subsquid/substrate-metadata-explorer": "^1.0.8",
+    "@subsquid/substrate-typegen": "^1.5.0",
+    "@subsquid/typeorm-codegen": "^0.2.3",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "eslint": "^7.32.0",
